--- a/example/src/main/res/layout/fragment_second.xml
+++ b/example/src/main/res/layout/fragment_second.xml
@@ -20,6 +20,19 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        android:id="@+id/klarna_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/add_klarna"
+        app:backgroundTint="@color/primer"
+        app:cornerRadius="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/vault_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/checkout_button" />
+
+    <Button
         android:id="@+id/vault_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
